landing has toolbar
..

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,7 +4,8 @@
 
     <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Raleway" rel="stylesheet">
+    <link rel="icon" href="">
 
     <style>
         :root {
@@ -12,7 +13,21 @@
         }
     </style>
 </head>
+
 <body class="">
+    <header class="mdc-toolbar mdc-toolbar--fixed mdc-toolbar--waterfall" style="background-color: rgba(255,255,255,0);">
+        <div class="mdc-toolbar__row">
+            <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
+                <span id="toolbar-icon" class="mdc-toolbar__title"><a href="" style="text-decoration: none;color:white;">&#x132c7;</a></span>
+            </section>
+
+            <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
+                <span class="mdc-toolbar__title"><a href="index.html" style="margin-left:0;font-family: 'Merriweather', serif;" class="toolbar-link">Home</a></span>
+                <span class="mdc-toolbar__title" style="margin-left:0;"><a href="records.html" style="font-family: 'Merriweather', serif;" class="toolbar-link">Records</a></span>
+            </section>
+        </div>
+    </header>
+
     <div class="full panel-1">
         <article id="banner-text" class="center">
             <h1 class="">Seshat</h1>
