--- a/webapp/records.html
+++ b/webapp/records.html
@@ -7,7 +7,7 @@
 
     <style>
         :root {
-            --mdc-theme-primary: #0e4ead;
+            --mdc-theme-primary: #d0623f;
         }
 
         *, html {
@@ -64,7 +64,7 @@
             <section class="mdc-toolbar__section">
                 <nav id="basic-tab-bar" class="mdc-tab-bar">
                     <a class="mdc-tab mdc-tab--active" href="#panel-1">Your Records</a>
-                    <a class="mdc-tab" href="#panel-2">Shared Records</a>
+                    <a class="mdc-tab" href="#panel-2">Search Records</a>
                     <span class="mdc-tab-bar__indicator"></span>
                 </nav>
             </section>
@@ -99,59 +99,41 @@
                 <div class="mdc-card">
                   <section class="mdc-card__primary flexed">
                     <h1 class="mdc-card__title mdc-card__title--large">Transcripts</h1>
-                    <button class="mdc-button">
-                        <i class="material-icons mdc-button__icon edit-button">mode_edit</i>
-                    </button>
                   </section>
                   <section class="mdc-card__supporting-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                     veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                     commodo consequat.
-                  </section>
-                  <section class="mdc-card__actions reversed">
-                    <button class="mdc-button mdc-button--compact mdc-card__action">Save</button>
-                    <button class="mdc-button mdc-button--compact mdc-card__action">Cancel</button>
                   </section>
                 </div>
 
                 <div class="mdc-card">
                   <section class="mdc-card__primary flexed">
                     <h1 class="mdc-card__title mdc-card__title--large">Test Scores</h1>
-                    <button class="mdc-button">
-                        <i class="material-icons mdc-button__icon edit-button">mode_edit</i>
-                    </button>
                   </section>
                   <section class="mdc-card__supporting-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                     veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                     commodo consequat.
-                  </section>
-                  <section class="mdc-card__actions reversed">
-                    <button class="mdc-button mdc-button--compact mdc-card__action">Save</button>
-                    <button class="mdc-button mdc-button--compact mdc-card__action">Cancel</button>
                   </section>
                 </div>
 
                 <div class="mdc-card">
                   <section class="mdc-card__primary flexed">
                     <h1 class="mdc-card__title mdc-card__title--large">Sharing</h1>
-                    <button class="mdc-button">
-                        <i class="material-icons mdc-button__icon edit-button">mode_edit</i>
-                    </button>
                   </section>
-                  <section class="mdc-card__supporting-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                    commodo consequat.
-                  </section>
-                  <section class="mdc-card__actions reversed">
-                    <button class="mdc-button mdc-button--compact mdc-card__action">Save</button>
-                    <button class="mdc-button mdc-button--compact mdc-card__action">Cancel</button>
-                  </section>
+                  <div class="mdc-text-field mdc-text-field--fullwidth">
+                        <input class="mdc-text-field__input"
+                             type="text"
+                             placeholder="Full-Width Text Field"
+                             aria-label="Full-Width Text Field">
+                    </div>
                 </div>
+
+
+
 
                 <div id="app" class="mdc-text-field" data-mdc-auto-init="MDCTextField">
                     <input type="text" class="mdc-text-field__input" id="demo-input">
