--- a/webapp/records.html
+++ b/webapp/records.html
@@ -4,56 +4,7 @@
 
     <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
-    <style>
-        :root {
-            --mdc-theme-primary: #d0623f;
-        }
-
-        *, html {
-            margin: 0;
-            padding: 0;
-        }
-
-        #content {
-            margin-top: 64px;
-            max-width: 800px;
-        }
-
-        .toolbar-link {
-            color: rgba(255,255,255,0.7);
-            padding: 24px;
-            text-decoration: none;
-        }
-
-        .toolbar-link:hover {
-            color: rgba(255,255,255,1.0);
-        }
-
-        .mdc-card__primary.flexed {
-            display: flex;
-            justify-content: space-between;
-        }
-        .mdc-card__actions.reversed {
-            flex-direction: row-reverse;
-        }
-        .mdc-card {
-            margin: 50px 0 50px 0;
-        }
-        .edit-button {
-            color: rgba(125,125,125,0.7);
-        }
-        .edit-button:hover {
-            color: rgba(125,125,125,1.0);
-        }
-
-        .panel {
-            display: none;
-        }
-        .panel.active {
-            display: block;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body class="mdc-typography">
     <header class="mdc-toolbar mdc-toolbar--fixed mdc-toolbar--waterfall">
@@ -132,9 +83,6 @@
                     </div>
                 </div>
 
-
-
-
                 <div id="app" class="mdc-text-field" data-mdc-auto-init="MDCTextField">
                     <input type="text" class="mdc-text-field__input" id="demo-input">
                     <label for="demo-input" class="mdc-text-field__label">{{ message }}</label>
@@ -161,100 +109,7 @@
     <script src="node_modules/web3/dist/web3.js"></script>
     <script src="node_modules/vue/dist/vue.js"></script>
     <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
-    <script>
-        mdc.autoInit();
-
-        var app = new Vue({
-            el: '#app',
-            data: {
-                message: 'MEOWMEOW!'
-            }
-        });
-
-        if (typeof web3 !== 'undefined') {
-          web3 = new Web3(web3.currentProvider);
-        } else {
-          // set the provider you want from Web3.providers
-          web3 = new Web3(new Web3.providers.HttpProvider("http://localhost:8545"));
-        }
-
-        var abi = [
-    {
-      "constant": false,
-      "inputs": [
-        {
-          "name": "str",
-          "type": "string"
-        }
-      ],
-      "name": "set",
-      "outputs": [],
-      "payable": false,
-      "stateMutability": "nonpayable",
-      "type": "function"
-    },
-    {
-      "constant": false,
-      "inputs": [
-        {
-          "name": "addr",
-          "type": "address"
-        }
-      ],
-      "name": "get",
-      "outputs": [
-        {
-          "name": "",
-          "type": "string"
-        }
-      ],
-      "payable": false,
-      "stateMutability": "nonpayable",
-      "type": "function"
-    },
-    {
-      "inputs": [],
-      "payable": false,
-      "stateMutability": "nonpayable",
-      "type": "constructor"
-    }
-  ];
-
-        var def = web3.eth.contract(abi);
-        var contract = def.at('0x3fd9fb67867057f2c0fc15d029b207f4219428fe')
-        web3.eth.defaultAccount = web3.eth.coinbase;
-        var coinbase = web3.eth.coinbase;
-        var balance = web3.eth.getBalance(coinbase);
-
-        contract.set("hey noah it worked");
-        setTimeout(function(){
-            console.log(contract.get.call(web3.eth.defaultAccount))
-        }, 3000);
-
-
-        var dynamicTabBar = window.dynamicTabBar = new mdc.tabs.MDCTabBar(document.querySelector('#basic-tab-bar'));
-        var panels = document.querySelector('.panels');
-
-        dynamicTabBar.tabs.forEach(function(tab) {
-          tab.preventDefaultOnClick = true;
-        });
-
-        function updatePanel(index) {
-          var activePanel = panels.querySelector('.panel.active');
-          if (activePanel) {
-            activePanel.classList.remove('active');
-          }
-          var newActivePanel = panels.querySelector('.panel:nth-child(' + (index + 1) + ')');
-          if (newActivePanel) {
-            newActivePanel.classList.add('active');
-          }
-        }
-
-        dynamicTabBar.listen('MDCTabBar:change', function ({detail: tabs}) {
-          var nthChildIndex = tabs.activeTabIndex;
-
-          updatePanel(nthChildIndex);
-        });
-    </script>
+    <script src="scripts/recordsDom.js"></script>
+    <script src="scripts/recordsEth.js"></script>
 </body>
 </html>
