--- a/webapp/admin.html
+++ b/webapp/admin.html
@@ -65,7 +65,7 @@
                   <section class="mdc-card__primary flexed">
                     <h1 class="mdc-card__title mdc-card__title--large">Transcripts</h1>
                   </section>
-                  <section class="mdc-card__supporting-text" id="transcript-text">
+                  <section class="mdc-card__supporting-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                     veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -77,7 +77,7 @@
                   <section class="mdc-card__primary flexed">
                     <h1 class="mdc-card__title mdc-card__title--large">Test Scores</h1>
                   </section>
-                  <section class="mdc-card__supporting-text" id="tests-text">
+                  <section class="mdc-card__supporting-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                     veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
