--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,15 +3,10 @@
     <title>Seshat</title>
 
     <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather|Raleway">
     <link rel="stylesheet" href="styles/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Raleway" rel="stylesheet">
     <link rel="icon" href="./imgs/icon.png"> <!-- Credit to Fengquan Li from The Noun Project-->
 
-    <style>
-        :root {
-            --mdc-theme-primary: #0e4ead;
-        }
-    </style>
 </head>
 
 <body>
@@ -42,7 +37,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article>
     </div>
-            
+
 
     <div id="app" class="mdc-text-field" data-mdc-auto-init="MDCTextField" style="display: none">
         <input type="text" class="mdc-text-field__input" id="demo-input">
