--- a/webapp/records.html
+++ b/webapp/records.html
@@ -31,33 +31,29 @@
                 <div class="mdc-card">
                   <section class="mdc-card__primary flexed">
                     <h1 class="mdc-card__title mdc-card__title--large">Personal Information</h1>
-                    <button class="mdc-button">
-                        <i class="material-icons mdc-button__icon edit-button">mode_edit</i>
-                    </button>
                   </section>
                   <section class="mdc-card__supporting-text">
                     <div class="mdc-text-field">
-                      <input type="text" id="text-field-no-js" class="mdc-text-field__input" placeholder="First Name">
+                      <input type="text" id="bio-first-name" class="mdc-text-field__input" placeholder="First Name">
                     </div>
                     <div class="mdc-text-field">
-                      <input type="text" id="text-field-no-js" class="mdc-text-field__input" placeholder="Middle Name">
+                      <input type="text" id="bio-middle-name" class="mdc-text-field__input" placeholder="Middle Name">
                     </div>
                     <div class="mdc-text-field">
-                      <input type="text" id="text-field-no-js" class="mdc-text-field__input" placeholder="Last Name">
+                      <input type="text" id="bio-last-name" class="mdc-text-field__input" placeholder="Last Name">
                     </div>
                     <div class="mdc-text-field">
-                      <input type="text" id="text-field-no-js" class="mdc-text-field__input" placeholder="DOB">
+                      <input type="text" id="bio-dob" class="mdc-text-field__input" placeholder="DOB">
                     </div>
                     <div class="mdc-text-field">
-                      <input type="text" id="text-field-no-js" class="mdc-text-field__input" placeholder="Languages">
+                      <input type="text" id="bio-languages" class="mdc-text-field__input" placeholder="Languages">
                     </div>
                     <div class="mdc-text-field">
-                      <input type="text" id="text-field-no-js" class="mdc-text-field__input" placeholder="Nationality">
+                      <input type="text" id="bio-nationality" class="mdc-text-field__input" placeholder="Nationality">
                     </div>
                   </section>
                   <section class="mdc-card__actions reversed">
-                    <button class="mdc-button mdc-button--compact mdc-card__action">Save</button>
-                    <button class="mdc-button mdc-button--compact mdc-card__action">Cancel</button>
+                    <button class="mdc-button mdc-button--compact mdc-card__action" id="update-bio">Update</button>
                   </section>
                 </div>
 
