--- a/webapp/index.html
+++ b/webapp/index.html
@@ -24,6 +24,7 @@
             <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
                 <span class="mdc-toolbar__title"><a id="but-1" style="margin-left:0;font-family: 'Merriweather', serif;" class="toolbar-link">About</a></span>
                 <span class="mdc-toolbar__title" style="margin-left:-3%;"><a href="records.html" style="font-family: 'Merriweather', serif;" class="toolbar-link">Records</a></span>
+                <span class="mdc-toolbar__title" style="margin-left:-3%;"><a href="testing.html" style="font-family: 'Merriweather', serif;" class="toolbar-link">Exam</a></span>
             </section>
         </div>
     </header>
@@ -38,8 +39,15 @@
 
     <div class="full back-panel" style="display: none;">
         <article style="display: block;padding-left: 5%;">
-            <h1 style="font-size: 3em;">About</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h1 style="font-size: 3em;margin-bottom: 5%;">About</h1>
+            <p>As college students ourselves, we've all been through the pain that is CollegeBoard and their AP exams, SATs, and Common App. Back then, we didn't have the means or the knowledge to combat a system that utilized a middleman and profited off of poor students like us who had no other choice. Now, however, with blockchain, we have created a web API that allows students, like us, and educational institutes to take a middleman like CollegeBoard out of the equation. Seshat lets us have control over our own educational records, and guarantees their validity by using the public ledger.
+            <span style="display: block;margin: 10px 0"></span>
+            </br>
+            Seshat lets a user keep track of their own educational records while also guaranteeing validity for others who want to see accurate information. It allows users to create their own ethereum wallet, and mine ethereum to use for the smart contracts that power the standardized testing system, as well as their educational records.
+            </br>
+            <span style="display: block;margin: 10px 0"></span>
+            Looking forward, Seshat can be applied to many things outside of educational records as well. In the future, we would love to continue implementing use cases, such as incorporating driver's license validation and passport validation within every person's unique address.
+            </p>
         </article>
     </div>
             
