--- a/webapp/records.html
+++ b/webapp/records.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Seshat - Records</title>
 
     <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
