--- a/webapp/admin.html
+++ b/webapp/admin.html
@@ -71,6 +71,10 @@
                     veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                     commodo consequat.
                   </section>
+                  <section class="mdc-card__actions reversed">
+                    <button class="mdc-button mdc-button--compact mdc-card__action">Save</button>
+                    <button class="mdc-button mdc-button--compact mdc-card__action">Cancel</button>
+                  </section>
                 </div>
 
                 <div class="mdc-card">
@@ -82,6 +86,10 @@
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                     veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                     commodo consequat.
+                  </section>
+                  <section class="mdc-card__actions reversed">
+                    <button class="mdc-button mdc-button--compact mdc-card__action">Save</button>
+                    <button class="mdc-button mdc-button--compact mdc-card__action">Cancel</button>
                   </section>
                 </div>
 
@@ -95,12 +103,12 @@
                              placeholder="Full-Width Text Field"
                              aria-label="Full-Width Text Field">
                     </div>
+                    <section class="mdc-card__actions reversed">
+                    <button class="mdc-button mdc-button--compact mdc-card__action">Save</button>
+                    <button class="mdc-button mdc-button--compact mdc-card__action">Cancel</button>
+                  </section>
                 </div>
 
-                <div id="app" class="mdc-text-field" data-mdc-auto-init="MDCTextField">
-                    <input type="text" class="mdc-text-field__input" id="demo-input">
-                    <label for="demo-input" class="mdc-text-field__label">{{ message }}</label>
-                </div>
             </div>
 
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 panel" id="panel-2" role="tabpanel" aria-hidden="true">
