--- a/webapp/records.html
+++ b/webapp/records.html
@@ -16,8 +16,7 @@
             </section>
             <section class="mdc-toolbar__section">
                 <nav id="basic-tab-bar" class="mdc-tab-bar">
-                    <a class="mdc-tab mdc-tab--active" href="#panel-1">Your Records</a>
-                    <a class="mdc-tab" href="#panel-2">Shared Records</a>
+                    <a class="mdc-tab mdc-tab--active" href="#panel-1">Search Records</a>
                     <span class="mdc-tab-bar__indicator"></span>
                 </nav>
             </section>
@@ -30,6 +29,11 @@
     <div class="mdc-layout-grid" id="content">
         <div class="mdc-layout-grid__inner panels">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 panel active" id="panel-1" role="tabpanel" aria-hidden="false">
+                <div class="mdc-text-field mdc-text-field--fullwidth mdc-text-field--box mdc-text-field--with-trailing-icon mdc-text-field--upgraded">
+                  <input type="text" id="addr-input" class="mdc-text-field__input" placeholder="Address">
+                  <i class="material-icons mdc-text-field__icon" tabindex="0" id="search-addr">search</i>
+                  <div class="mdc-text-field__bottom-line"></div>
+                </div>
                 <div class="mdc-card">
                   <section class="mdc-card__primary flexed">
                     <h1 class="mdc-card__title mdc-card__title--large">Personal Information</h1>
@@ -76,37 +80,6 @@
                     <h1 class="mdc-card__title mdc-card__title--large">Test Scores</h1>
                   </section>
                   <section class="mdc-card__supporting-text" id="tests-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                    commodo consequat.
-                  </section>
-                </div>
-
-                <div class="mdc-card">
-                  <section class="mdc-card__primary flexed">
-                    <h1 class="mdc-card__title mdc-card__title--large">Sharing</h1>
-                  </section>
-                  <div class="mdc-text-field mdc-text-field--fullwidth">
-                        <input class="mdc-text-field__input"
-                             type="text"
-                             placeholder="Full-Width Text Field"
-                             aria-label="Full-Width Text Field">
-                    </div>
-                </div>
-
-                <div id="app" class="mdc-text-field" data-mdc-auto-init="MDCTextField">
-                    <input type="text" class="mdc-text-field__input" id="demo-input">
-                    <label for="demo-input" class="mdc-text-field__label">{{ message }}</label>
-                </div>
-            </div>
-
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 panel" id="panel-2" role="tabpanel" aria-hidden="true">
-                <div class="mdc-card">
-                  <section class="mdc-card__primary flexed">
-                    <h1 class="mdc-card__title mdc-card__title--large">Records Shared With You</h1>
-                  </section>
-                  <section class="mdc-card__supporting-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                     veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
