--- a/webapp/records.html
+++ b/webapp/records.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="styles/main.css">
+
+    <link rel="icon" href="./imgs/icon.png"> <!-- Credit to Fengquan Li from The Noun Project-->
 </head>
 <body class="mdc-typography">
     <header class="mdc-toolbar mdc-toolbar--fixed mdc-toolbar--waterfall">
         <div class="mdc-toolbar__row">
             <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-                <span class="mdc-toolbar__title">Seshat</span>
+                <span class="mdc-toolbar__title">Seshat | &#x132c7;</span>
             </section>
             <section class="mdc-toolbar__section">
                 <nav id="basic-tab-bar" class="mdc-tab-bar">
@@ -92,7 +94,6 @@
 
 
     <script src="node_modules/web3/dist/web3.js"></script>
-    <script src="node_modules/vue/dist/vue.js"></script>
     <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
     <script src="scripts/recordsDom.js"></script>
     <script src="scripts/recordsEth.js"></script>
