--- a/webapp/testing.html
+++ b/webapp/testing.html
@@ -6,6 +6,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Merriweather|Raleway|Lato" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./styles/styles.css">
 
+    <link rel="icon" href="./imgs/icon.png"> <!-- Credit to Fengquan Li from The Noun Project-->
+
 	<style>
         :root {
             --mdc-theme-primary: #cd5c3a;
@@ -24,9 +26,9 @@
         </div>
     </header>
 
-	<div class="test">      	
+	<div class="test">
 		<button class='mdc-button' id="ready" style="font-family: 'Raleway', sans-serif;" onclick='readyClick()'>Ready</button>
-		<br/>               
+		<br/>
 	</div>
 </body>
 
